--- a/app/src/helpers/other.scss
+++ b/app/src/helpers/other.scss
@@ -57,6 +57,10 @@ $box-shadow-for-has-shadow-hovered: 1px 3px 10px 2px rgba($black, 0.1), 0 0 0 1p
   align-items: center !important;
 }
 
+.is-clickable {
+  cursor: pointer;
+}
+
 .is-disabled {
   cursor: auto !important;
   pointer-events: none !important;
