--- a/app/src/utilities/variables.scss
+++ b/app/src/utilities/variables.scss
@@ -163,6 +163,7 @@ $shades: mergeColorMaps((
   "grey": $grey, 
   "grey-light": $grey-light, 
   "grey-lighter": $grey-lighter, 
+  "grey-lightest": $grey-lightest, 
   "white-ter": $white-ter, 
   "white-bis": $white-bis
 ), $custom-shades);
