--- a/app/templates/form/checkbox.html
+++ b/app/templates/form/checkbox.html
@@ -331,8 +331,8 @@
         <p>$checkbox-checked-filled-background-color: $primary;</p>
         <p>$checkbox-group-border-color: $border;</p>
         <p>$checkbox-group-divide-color: $border;</p>
-        <p>$checkbox-title-filled-background-color: $dark;</p>
-        <p>$checkbox-title-filled-color: $light;</p>
+        <p>$checkbox-title-filled-background-color: $primary;</p>
+        <p>$checkbox-title-filled-color: $primary-invert;</p>
       </div>
 
     </div>
