--- a/app/src/sample-variables.scss
+++ b/app/src/sample-variables.scss
@@ -172,6 +172,7 @@ $fullhd-enabled: false;
 // add script to index.html
 // <script type="text/javascript">
 //   (function setViewPort() {
+//     // tablet use desktop viewport
 //     if (window.matchMedia('screen and (min-width: 768px) and (max-width: 1365px)').matches) {
 //       document.querySelector('meta[name="viewport"]').setAttribute('content', 'width=1366');
 //     }
@@ -192,6 +193,7 @@ $fullhd-enabled: false;
 // add script to index.html
 // <script type="text/javascript">
 //   (function setViewPort() {
+//     // mobile use tablet viewport
 //     if (window.matchMedia('screen and (max-width: 767px)').matches) {
 //       document.querySelector('meta[name="viewport"]').setAttribute('content', 'width=768');
 //     }
