--- a/app/src/bulma-fix.scss
+++ b/app/src/bulma-fix.scss
@@ -13,7 +13,7 @@
 .field.is-horizontal {
   .field-label {
     flex-grow: 0;
-    flex-basis: 100px; // default 100px, define this value in case by case
+    flex-basis: auto; // default auto, define this value in case by case
   }
   .field-body {
     flex-grow: 1;
@@ -96,5 +96,21 @@
         }
       }
     }
+  }
+}
+
+// Fix too small font-size 0.875rem change to $size-normal
+.dropdown-item {
+  font-size: $size-normal;
+  padding: 0.5rem 1.5rem;
+}
+
+.navbar-dropdown {
+  font-size: $size-normal;
+}
+
+@include from($navbar-breakpoint) {
+  .navbar-dropdown {
+    font-size: $size-normal;
   }
 }
