--- a/app/src/base/elements-spacing.scss
+++ b/app/src/base/elements-spacing.scss
@@ -134,7 +134,7 @@
 
 @include mobile {
   .field:not(:last-child) {
-    margin-bottom: $field-spacing-mobile;
+    margin-bottom: $field-horizontal-spacing-mobile;
   }
 
   .field-label {
