--- a/app/src/utilities/variables-config.scss
+++ b/app/src/utilities/variables-config.scss
@@ -18,6 +18,7 @@ $tile-spacing-mobile: $block-spacing-mobile / 2 !default;
 $field-spacing: $block-spacing !default;
 $field-spacing-mobile: $block-spacing-mobile !default;
 $field-horizontal-spacing: $brick-spacing !default;
+$field-horizontal-spacing-mobile: $brick-spacing !default;
 
 $label-spacing: $brick-spacing !default;
 
