--- a/app/src/form/form.scss
+++ b/app/src/form/form.scss
@@ -22,3 +22,12 @@ $label-size: $size-normal !default;
     
   }
 }
+
+.control.has-icons-right .input, 
+.control.has-icons-right .select select {
+  padding-right: $control-icon-width;
+}
+.control.has-icons-left .icon,
+.control.has-icons-right .icon {
+  padding-right: $control-icon-width;
+}
