--- a/app/src/helpers/other.scss
+++ b/app/src/helpers/other.scss
@@ -79,6 +79,10 @@ $box-shadow-for-has-shadow-hovered: 1px 3px 10px 2px rgba($black, 0.1), 0 0 0 1p
   }
 }
 
+.is-borderless {
+  border: none;
+}
+
 .has-shadow {
   box-shadow: $box-shadow-for-has-shadow !important;
 }
