--- a/app/src/sample-variables.scss
+++ b/app/src/sample-variables.scss
@@ -152,12 +152,12 @@ $desktop: 1024px;
 // breakpoint for screen width 1280, 1366 (ipad pro landscape), 1440
 // widescreen size by bulma default, 1024 + 256 = 1280
 $widescreen: 1280px;
-$widescreen-enabled: false;
+$widescreen-enabled: true;
 
 // breakpoint for screen width 1600, 1920, 2560
 // fullhd size by 1280 + 256 = 1536
 $fullhd: 1536px; 
-$fullhd-enabled: false;
+$fullhd-enabled: true;
 
 
 // For 2 screen sizes; mobile & desktop, Uncomment these vars.
@@ -203,14 +203,14 @@ $fullhd-enabled: false;
 
 // For Non-Responsive, Uncomment these vars.
 // $mobile-use-desktop-layout: true;
-// $tablet: 768px;
+// $tablet: 1px;
 // $tablet-use-desktop-layout: true;
 // $desktop: 1366px; // change to fit your requirement of desktop minimum screen width
 // $widescreen-enabled: false;
 // $fullhd-enabled: false;
 // $body-overflow-x: auto;
 // $body-min-width: $desktop - $vertical-scrollbar-width;
-
+// $navbar-breakpoint: 0;
 
 // navbar
 $navbar-breakpoint: $desktop;
