--- a/app/src/helpers/flexbox.scss
+++ b/app/src/helpers/flexbox.scss
@@ -83,6 +83,10 @@
   align-items: stretch !important;
 }
 
+.is-align-baseline {
+  align-items: baseline !important;
+}
+
 .is-align-start {
   align-items: flex-start !important;
 }
