--- a/app/src/sample-variables-config.scss
+++ b/app/src/sample-variables-config.scss
@@ -149,6 +149,9 @@ $box-padding: 1.2rem;
 // $box-link-active-shadow: inset 0 1px 2px rgba($scheme-invert, 0.2), 0 0 0 1px $link;
 // --
 
+// = icon
+$icon-text-spacing: $brick-spacing;
+
 // = table
 // $table-color: $text-strong;
 // $table-background-color: $scheme-main;
