--- a/app/src/helpers/other.scss
+++ b/app/src/helpers/other.scss
@@ -69,6 +69,10 @@ $box-shadow-for-has-shadow-hovered: 1px 3px 10px 2px rgba($black, 0.1), 0 0 0 1p
   opacity: 0.5 !important;
   position: relative !important;
 
+  .is-clickable {
+    pointer-events: none !important;
+  }
+
   &:after {
     content: ' ';
     position: absolute;
