--- a/app/src/element/button.scss
+++ b/app/src/element/button.scss
@@ -25,16 +25,18 @@ $button-large-padding-horizontal: 4.8rem !default;
     padding-right: $button-large-padding-horizontal;
   }
 
-  &.is-loading {
-    .icon {
-      display: none;
-    }
-  }
-
   @each $name, $pair in $colors {
     $color: nth($pair, 1);
     $color-invert: nth($pair, 2);
     &.is-#{$name} {
+      &.is-inverted {
+        &.is-loading {
+          &::after {
+            border-color: transparent transparent $color $color !important;
+          }
+        }
+      }
+      
       .badge {
         color: $color;
         background: $color-invert;
