ngx-toastr improve style

--- a/app/src/sample-variables-config.scss
+++ b/app/src/sample-variables-config.scss
@@ -510,6 +510,8 @@ $ngx-datatable-selection-checkbox-checked-filled-style: false;
 // $ngx-datatable-summary-row-color: $grey;
 // $ngx-datatable-summary-row-background-color: $text-invert;
 
+// $toast-box-shadow: 0 0 7px #999999;
+
 // $tooltip-font-size: $size-normal;
 // $tooltip-font-weight: $weight-normal;
 // $tooltip-background-color: $scheme-main-ter;
