html overflow hidden add padding to replace scrollbar width

--- a/app/src/base/generic.scss
+++ b/app/src/base/generic.scss
@@ -1,6 +1,10 @@
 html {
   font-size: $body-size;
   height: 100%;
+  
+  &.is-overflow-hidden {
+    padding-right: 17px;
+  }
 }
 
 @if $mobile-use-tablet-layout {
