--- a/app/src/lib/_all.scss
+++ b/app/src/lib/_all.scss
@@ -1,11 +1,12 @@
 @charset "utf-8";
 
 @import "angular2-dropdown-multiselect";
+@import "froala-editor";
 @import "ng2-completer";
 @import "ngx-bootstrap";
 @import "ngx-chips";
 @import "ngx-datatable";
+@import "ngx-toastr";
 @import "pickr";
 @import "placeholder-loading";
-@import "ngx-toastr";
 @import "tippy";
