--- a/app/templates/component/modal.html
+++ b/app/templates/component/modal.html
@@ -200,7 +200,7 @@
             <div>.......</div>
             <div>.......</div>
             <div class="buttons is-justify-center">
-              <button class="button is-primary">Save</button>
+              <button class="button is-danger">Save</button>
               <button class="button">Cancel</button>
             </div>
           </section>
@@ -230,7 +230,7 @@
       <div>.......</div>
       <div>.......</div>
       <div class="buttons is-justify-center">
-        <button class="button is-primary">Save</button>
+        <button class="button is-danger">Save</button>
         <button class="button">Cancel</button>
       </div>
     </section>
